# monopoly-polymarket-agent

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD_DEMO.md  DASHBOARD_READY.md  DATABASE_SETUP.md  DRY_RUN_OPTIMIZATION.md  DRY_RUN_TURBO_MODE.md  Dockerfile  LICENSE.md  MARKETS_PAGE_IMPLEMENTATION.md  METARUNE_QUICKSTART.md  MISSING_UI_FEATURES.md  NEXT_MIGRATION_COMPLETE.md  OLD_UI_CLEANUP.md  PHASE_2_COMPLETE.md  PODMAN_SETUP.md  PORTFOLIO_PERSISTENCE_FIX.md  QUICK_START_NEXTJS.md  REACTIVE_STATE_MANAGEMENT.md  README.md  README_SETUP.md  RUNNER_DEMO.md  SETUP_COMPLETE.txt  TESTING_CHECKLIST_NEXTJS.md  TESTING_QUICKSTART.md  TEST_COMMANDS.md  UPGRADE.md  UV_COMMANDS.md  pyproject.toml  start-dashboard.sh
agents/: .env.example  .gitignore  DATABASE.md  Dockerfile  LICENSE.md  PHASE_7_TESTING.md  README.md  RUN_TESTS.md  pyproject.toml  pytest.ini  pytest_web3_fix.py  requirements.txt  run_tests.sh
agents/.github/workflows/: python-app.yml
agents/agents/application/: executor.py  runner.py  trade.py
agents/agents/connectors/: chroma.py  database.py  events.py
agents/agents/core/: __init__.py  approvals.py  hub.py  session.py  structured_logging.py  tools.py
agents/agents/polymarket/: polymarket.py
agents/agents/utils/: utils.py
agents/application/: executor.py
agents/dashboard/components/: activity_item.html  chart.html  control_button.html  forecast_card.html  stat_card.html  status_badge.html  trade_row.html
agents/dashboard/partials/: activity_feed.html  agent_controls.html  agent_stats.html  agent_status.html  agent_status_display.html  forecast_list.html  portfolio_stats.html  trade_list.html
agents/scripts/python/: cli.py  (+9 more)
agents/tests/: PHASE1_SUMMARY.md  PHASE2_3_SUMMARY.md  PHASE2_4_SUMMARY.md  PHASE2_SUMMARY.md  PHASES_1_5_TEST_SUITE.md  README.md  conftest.py
(+88 files in other folders)
