[project]
name = "monopoly-agents"
version = "0.1.0"
description = "Monopoly Polymarket Agent System"
license = "MIT"
authors = [
    { name = "Metarune Labs Pvt Ltd.", email = "hello@metarunelabs.dev" },
]
requires-python = ">=3.9.10"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.5,<0.6",
    "exa-py>=1.5.0",
    "onnxruntime>=1.18.1,<1.19",
    "devtools>=0.12.2",
    "eip712-structs>=1.1.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jq>=1.7.0",
    "langchain>=0.2.11",
    "langchain-anthropic>=0.1.23",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.2.10",
    "langchainhub>=0.1.20",
    "langgraph>=0.1.17",
    "langsmith>=0.1.94",
    "newsapi-python>=0.2.7",
    "numpy>=1.26.4",
    "poly-eip712-structs>=0.0.1",
    "py-clob-client>=0.17.5",
    "py-order-utils>=0.3.2",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scheduler>=0.8.7",
    "sqlalchemy>=2.0.31",
    "tavily-python>=0.3.5",
    "typer>=0.12.3",
    "uvicorn>=0.30.3",
    "sentence-transformers>=2.2.0",
    "setuptools",
    "web3>=6.11.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "scripts"]

[project.scripts]
monopoly = "scripts.python.cli:app"
test-agents = "scripts.python.test_runner:main"
start = "scripts.python.server:main"
dev = "scripts.python.server:dev"
dev-frontend = "scripts.python.frontend:start_frontend"
dev-full = "scripts.python.frontend:start_full_stack"

[dependency-groups]
dev = [
    "black>=24.4.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=3.8.0",
]
